--- a/src/global.less
+++ b/src/global.less
@@ -8,44 +8,6 @@ body {
   margin: 0;
 }
 
-.qaoverlay {
-  .overlay-item {
-    padding-bottom: 10px;
-    border-bottom: 1px dashed #ccc;
-    &:last-child {
-      border: none;
-    }
-    .circle {
-      display: 'inline-block';
-      margin-right: 10px;
-      width: 26px;
-      height: 26px;
-      text-align: center;
-      line-height: 26px;
-      background: #f39800;
-      border-radius: 50%;
-      color: #fff;
-    }
-    .ask {
-      font-size: 16px;
-      color: #333;
-    }
-    .answer {
-      flex: 1;
-      height: 40px;
-      font-size: 14px;
-      color: #999;
-      overflow: hidden;
-      word-wrap: normal;
-      text-overflow: ellipsis;
-    }
-    div:hover {
-      color: #3192e1;
-      cursor: pointer;
-    }
-  }
-}
-
 .circle {
   display: 'inline-block';
   margin-right: 10px;
@@ -72,59 +34,53 @@ body {
   text-overflow: ellipsis;
 }
 
-.ecp_top-nav{
-  height: 0 !important;
-  width: 0 !important;
-  border: none !important;
-}
-.ecp_tn-nav{
-  display:none;
-}
-.tn-person-r{
-  display:none;
-}
-.ecp_tn-header{
-  display:none;
-}
-
-.login-r .content{
-  width: 290px !important;
-}
-.login-icon dl{
-  height: 55px !important;
-}
-
-
-.input-group input{
-  outline: none;
-  height: 34px !important;
-  line-height: 34px !important;
-}
-
-
-
-// .ecp_top-nav{
-//   position: absolute;
-//   top: 0;
-//   widows: 100%;
+// .ecp_top-nav {
+//   height: 0 !important;
+//   width: 0 !important;
+//   border: none !important;
 // }
-// .ecp_tn-nav{
-//   // display:none;
+// .ecp_tn-nav {
+//   display: none;
 // }
-// .tn-person-r{
-//   // display:none;
+// .tn-person-r {
+//   display: none;
 // }
-// .ecp_tn-header{
-//   // display:none;
+// .ecp_tn-header {
+//   display: none;
 // }
 
-// .outlogin_layerbox_bylx .layerbox_left{
-//   width: 300px !important;
-// }
-
-// .login-r .content{
+// .login-r .content {
 //   width: 290px !important;
 // }
-// .login-icon dl{
+// .login-icon dl {
 //   height: 55px !important;
+// }
+
+// .input-group input {
+//   outline: none;
+//   height: 34px !important;
+//   line-height: 34px !important;
+// }
+
+// .ecp_top-nav {
+//   position: absolute;
+//   top: 0;
+//   width: 100%;
+//   background: transparent !important;
+//   border: none !important;
+// }
+// .ecp_tn-nav {
+//   display: none;
+// }
+
+// .tn-person-r .ecp_tn-title .ecp_tn-tab i, .tn-person-r .tn-user i{
+//   color: transparent;
+// }
+
+// .tn-person-r .ecp_tn-arrow{
+//   display: none !important;
+// }
+
+// .ecp_tn-tab .icon-new{
+//   display: none !important;
 // }
