--- a/src/components/SmartInput/inputTips.less
+++ b/src/components/SmartInput/inputTips.less
@@ -1,7 +1,9 @@
 .tip-list {
   border: 1px solid #d9d9d9;
-  li.ant-list-item {
+  :global(.ant-list-item) {
     padding-left: 11px;
+    padding-top: 6px;
+    padding-bottom: 6px;
     cursor: pointer;
     &:hover {
       background: #eee;
@@ -9,6 +11,14 @@
     .list-item {
       width: 96%;
     }
-    
+    :global(.anticon) {
+      transition: all 0.2s ease;
+      -moz-transition: all 0.2s ease; /* Firefox 4 */
+      -webkit-transition: all 0.2s ease; /* Safari 和 Chrome */
+      -o-transition: all 0.2s ease;
+      &:hover {
+        transform: rotate(180deg);
+      }
+    }
   }
 }
