--- a/src/pages/reply/index.less
+++ b/src/pages/reply/index.less
@@ -1,5 +1,27 @@
 .reply{
-  .cotent{
-    width: 100%;
+  .content{
+    width: 62.5%;
+    margin: auto;
+    .title{
+      font-size: 24px;
+      color: #666;
+      padding: 10px 10px 20px;
+    }
+    .replyCount{
+      color: #999;
+    }
+    .answerItem{
+      // height: 80px;
+      border-bottom: 1px solid #ccc;
+      padding: 20px 0;
+      .itemTitle{
+        font-size: 14px;
+        color: #333;
+      }
+    }
+
+    .draft{
+      margin: 20px 0;
+    }
   }
 }
