--- a/src/global.less
+++ b/src/global.less
@@ -34,33 +34,33 @@ body {
   text-overflow: ellipsis;
 }
 
-// .ecp_top-nav {
-//   height: 0 !important;
-//   width: 0 !important;
-//   border: none !important;
-// }
-// .ecp_tn-nav {
-//   display: none;
-// }
-// .tn-person-r {
-//   display: none;
-// }
-// .ecp_tn-header {
-//   display: none;
-// }
+.ecp_top-nav {
+  height: 0 !important;
+  width: 0 !important;
+  border: none !important;
+}
+.ecp_tn-nav {
+  display: none;
+}
+.tn-person-r {
+  display: none;
+}
+.ecp_tn-header {
+  display: none;
+}
 
-// .login-r .content {
-//   width: 290px !important;
-// }
-// .login-icon dl {
-//   height: 55px !important;
-// }
+.login-r .content {
+  width: 290px !important;
+}
+.login-icon dl {
+  height: 55px !important;
+}
 
-// .input-group input {
-//   outline: none;
-//   height: 34px !important;
-//   line-height: 34px !important;
-// }
+.input-group input {
+  outline: none;
+  height: 34px !important;
+  line-height: 34px !important;
+}
 
 // .ecp_top-nav {
 //   position: absolute;
