--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -134,6 +134,16 @@
                 font-weight: 400;
                 padding-left: 20px;
                 padding-bottom: 20px;
+                .questions_item{
+                  overflow: hidden;
+                  text-overflow: ellipsis;
+                  white-space: nowrap;
+                  color: #9a9ca4;
+                  display: block;
+                  &:hover{
+                    color: lightsalmon;
+                  }
+                }
               }
             }
           }
