--- a/src/pages/result/components/Scholar/index.less
+++ b/src/pages/result/components/Scholar/index.less
@@ -13,6 +13,7 @@
   .Scholar_info {
     .Scholar_info_item {
       color: #333;
+      padding: 4px 0;
       label {
         color: #999;
       }
