--- a/src/layouts/BasicLayout.less
+++ b/src/layouts/BasicLayout.less
@@ -26,7 +26,7 @@
         margin-top: -16px;
       }
       .title{
-        color: #fff;
+        color: rgba(255,255,255,.8);
         position: absolute;
         left: 160px;
         top: 40%;
@@ -102,15 +102,39 @@
       .inputGroup{
         .logo{
           // display: none;
-          margin-left: 1%;
+          margin-left: 0;
         }
         .title{
+          display: none;
+        }
+        .tips{
           display: none;
         }
         .inputWrap{
           position: absolute;
           left: 10%;
-          width: 40%;
+          width: 50%;
+        }
+      }
+    }
+  }
+
+  @media screen and(max-width: 400px) {
+    .header{
+      .inputGroup{
+        .logo{
+          display: none;
+        }
+        .title{
+          display: none;
+        }
+        .login{
+          display: none;
+        }
+        .inputWrap{
+          position: absolute;
+          // left: 10%;
+          width: 100%;
         }
       }
     }
