--- a/src/layouts/BasicLayout.less
+++ b/src/layouts/BasicLayout.less
@@ -76,6 +76,9 @@
         .register_btn {
           height: 30px;
           width: 60px;
+          display: inline-block;
+          text-align: center;
+          line-height: 28px;
           background: transparent;
           color: #fff;
           border: 1px solid #fff;
