--- a/src/layouts/HomeLayout.less
+++ b/src/layouts/HomeLayout.less
@@ -19,6 +19,9 @@
       .register_btn {
         height: 30px;
         width: 60px;
+        display: inline-block;
+        line-height: 28px;
+        text-align: center;
         background: transparent;
         color: #fff;
         border: 1px solid #fff;
