--- a/src/pages/result/components/Journal/index.less
+++ b/src/pages/result/components/Journal/index.less
@@ -5,6 +5,9 @@
   background: #fff;
   .Journal_wrapper{
     overflow: hidden;
+    padding: 10px 0;
+    border-bottom: 1px dashed #ccc;
+    color: #333;
     .Journal_left{
       float: left;
       margin-right: 40px;
