--- a/src/pages/result/components/FAQ/index.less
+++ b/src/pages/result/components/FAQ/index.less
@@ -17,9 +17,10 @@
       float: left;
       text-align: center;
     }
-    .text{
+    .text {
       font-size: 16px;
       font-weight: 400;
+      overflow: hidden;
     }
   }
 }
