--- a/src/pages/result/components/SgList/index.less
+++ b/src/pages/result/components/SgList/index.less
@@ -4,6 +4,8 @@
     margin-bottom: 20px;
     padding: 20px;
     background: #fff;
+    word-break: break-all;
+    word-wrap: break-word;
   }
   :global(.ant-list-footer){
     overflow: hidden;
