--- a/src/pages/result/components/ReferenceBook/index.less
+++ b/src/pages/result/components/ReferenceBook/index.less
@@ -15,6 +15,8 @@
     line-height: 27.2px;
     text-indent: 2em;
     margin-bottom: 20px;
+    text-align: left;
+
   }
   .ReferenceBook_more {
     color: #999;
