文献列表添加分页功能

--- a/src/pages/result/index.less
+++ b/src/pages/result/index.less
@@ -2,6 +2,7 @@
   width: 1200px;
   margin: 0 auto;
   padding-top: 20px;
+  min-height: calc(100vh - 84px - 50px);
   .result_tips{
     padding-bottom: 10px;
   }
