--- a/src/pages/result/components/Scholar/index.less
+++ b/src/pages/result/components/Scholar/index.less
@@ -11,6 +11,7 @@
     margin-right: 10px;
   }
   .Scholar_info {
+    overflow: hidden;
     .Scholar_info_item {
       color: #333;
       padding: 4px 0;
@@ -19,7 +20,7 @@
       }
     }
   }
-  .Scholar_more{
+  .Scholar_more {
     color: #999;
     display: inline-block;
     text-align: right;
