--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -49,6 +49,7 @@
               text-overflow: ellipsis;
               overflow: hidden;
               white-space: nowrap;
+              padding-bottom: 20px;
               .item {
                 font-size: 16px;
                 font-weight: 400;
@@ -66,6 +67,9 @@
                 }
                 .item_content {
                   line-height: 32px;
+                  overflow: hidden;
+                  text-overflow: ellipsis;
+                  white-space: nowrap;
                   &:hover {
                     color: lightsalmon;
                   }
@@ -134,13 +138,13 @@
                 font-weight: 400;
                 padding-left: 20px;
                 padding-bottom: 20px;
-                .questions_item{
+                .questions_item {
                   overflow: hidden;
                   text-overflow: ellipsis;
                   white-space: nowrap;
                   color: #9a9ca4;
                   display: block;
-                  &:hover{
+                  &:hover {
                     color: lightsalmon;
                   }
                 }
