--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -27,6 +27,8 @@
         width: 100%;
         margin-bottom: 40px;
         text-align: right;
+        overflow-x: scroll;
+        white-space: nowrap;
         .tag {
           cursor: pointer;
           font-size: 16px;
@@ -36,6 +38,9 @@
           background: transparent;
           display: inline-block;
         }
+      }
+      .right_top::-webkit-scrollbar{
+        display: none;
       }
       .right_bottom {
         width: 100%;
