--- a/src/pages/result/components/Medical/index.less
+++ b/src/pages/result/components/Medical/index.less
@@ -7,7 +7,7 @@
     color: #2f8bd6;
     text-decoration: none;
     padding-bottom: 10px;
-    font-size: medium;
+    font-size: 16px;
   }
   .abstract {
     color: #333;
