修改首页技能tab栏可以滑动

--- a/src/global.less
+++ b/src/global.less
@@ -7,6 +7,9 @@ body,
 body {
   margin: 0;
 }
+.slick-prev:before,.slick-next:before{
+  content: '' !important;
+}
 
 .circle {
   display: 'inline-block';
