--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -26,20 +26,39 @@
       .right_top {
         width: 100%;
         margin-bottom: 40px;
-        text-align: right;
-        overflow-x: scroll;
-        white-space: nowrap;
         .tag {
           cursor: pointer;
           font-size: 16px;
           font-weight: 400;
           color: #23242a;
+          text-align: center;
+          white-space: nowrap;
           padding: 8px 24px;
           background: transparent;
           display: inline-block;
         }
+        .active_tag {
+          cursor: pointer;
+          font-size: 16px;
+          font-weight: 400;
+          padding: 8px 24px;
+          text-align: center;
+          white-space: nowrap;
+          display: inline-block;
+          background: #29a7f3;
+          color: #fff;
+          border-radius: 4px;
+        }
+        .arrow{
+          font-size: 14px;
+          color: black;
+          display: block;
+          width: 100%;
+          height: 100%;
+          line-height: 26px;
+        }
       }
-      .right_top::-webkit-scrollbar{
+      .right_top::-webkit-scrollbar {
         display: none;
       }
       .right_bottom {
