--- a/src/pages/result/components/CommunityAnswer/index.less
+++ b/src/pages/result/components/CommunityAnswer/index.less
@@ -6,6 +6,7 @@
     color: #2f8bd6;
     font-size: 16px;
     padding-bottom: 20px;
+    display: inline-block;
   }
   .CommunityAnswer_answer{
     color: #333;
