--- a/src/pages/result/components/Journal/index.less
+++ b/src/pages/result/components/Journal/index.less
@@ -11,10 +11,12 @@
     .Journal_left{
       float: left;
       margin-right: 40px;
+      overflow: hidden;
     }
     .Journal_right {
+      overflow: hidden;
       .Journal_right_item{
-        height: 24px;
+        // height: 24px;
         line-height: 24px;
       }
     }
