上线前修复bug

--- a/src/pages/result/components/FAQ/index.less
+++ b/src/pages/result/components/FAQ/index.less
@@ -22,5 +22,10 @@
       font-weight: 400;
       overflow: hidden;
     }
+    .source{
+      font-size: 14px;
+      color: #999;
+      text-align: right;
+    }
   }
 }
