--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -151,6 +151,7 @@
                 width: 100%;
                 img {
                   width: 100%;
+                  height: 100%;
                 }
               }
               .title {
