--- a/src/pages/result/components/ReferenceBook/index.less
+++ b/src/pages/result/components/ReferenceBook/index.less
@@ -16,13 +16,15 @@
     text-indent: 2em;
     margin-bottom: 20px;
     text-align: left;
+    img{
+      width: 50%;
+    }
 
   }
   .ReferenceBook_more {
     color: #999;
     cursor: pointer;
     display: inline-block;
-    width: 100%;
     padding: 10px 0;
     text-align: right;
   }
