--- a/src/pages/result/components/Graphic.less
+++ b/src/pages/result/components/Graphic.less
@@ -5,6 +5,16 @@
   background: #fff;
   word-break: break-all;
   word-wrap: break-word;
+  .wrapper{
+    color: rgb(51, 51, 51);
+    letter-spacing: 2px;
+    line-height: 27.2px;
+    // text-indent: 2em;
+  }
+  .answer_item{
+    padding: 10px;
+    border-bottom: 1px dotted lightsalmon;
+  }
   h3{
     font-weight: 800;
   }
