--- a/src/pages/result/components/Journal/index.less
+++ b/src/pages/result/components/Journal/index.less
@@ -10,8 +10,12 @@
     color: #333;
     .Journal_left{
       float: left;
-      margin-right: 40px;
+      margin-right: 20px;
       overflow: hidden;
+      img{
+        width: 180px;
+        height: auto;
+      }
     }
     .Journal_right {
       overflow: hidden;
