--- a/src/pages/result/components/ReferenceBook/index.less
+++ b/src/pages/result/components/ReferenceBook/index.less
@@ -16,13 +16,16 @@
     text-indent: 2em;
     margin-bottom: 20px;
     text-align: left;
+   
     img{
-      width: 50%;
+      width: 15%;
+      height: auto;
+      display: inline-block;
     }
 
   }
   .ReferenceBook_more {
-    color: #999;
+    // color: #999;
     cursor: pointer;
     display: inline-block;
     padding: 10px 0;
@@ -31,7 +34,7 @@
   .ReferenceBook_extra {
     text-align: right;
     .ReferenceBook_name {
-      color: #999;
+      // color: #999;
       cursor: pointer;
       &:hover {
         color: lightsalmon;
