--- a/src/pages/result/components/SgList/index.less
+++ b/src/pages/result/components/SgList/index.less
@@ -24,7 +24,7 @@
     float: right;
     text-align: right;
     cursor: pointer;
-    color: #999;
+    // color: #999;
     p{
       margin: 0;
     }
