--- a/src/pages/result/components/Sentence/index.less
+++ b/src/pages/result/components/Sentence/index.less
@@ -26,7 +26,7 @@
     .Sentence_extra {
       text-align: right;
       .Sentence_name {
-        color: #999;
+        // color: #999;
         cursor: pointer;
         &:hover {
           color: lightsalmon;
