--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -134,7 +134,7 @@
       }
     }
     .special_bottom {
-      height: 460px;
+      // height: 460px;
       :global(.slick-slider) {
         height: 100%;
         :global(.slick-list) {
@@ -142,8 +142,8 @@
           .special_questions {
             .specialWrapper {
               background: #fff;
+              padding: 20px;
               box-shadow: 0px 0px 4px 0px rgba(0, 132, 255, 0.2) inset;
-
               &:hover {
                 box-shadow: 0px 0px 24px 0px rgba(0, 132, 255, 0.2);
               }
@@ -152,14 +152,16 @@
                 img {
                   width: 100%;
                   height: 100%;
+                  cursor: pointer;
                 }
               }
               .title {
                 padding: 20px;
               }
               .questions {
-                color: #9a9ca4;
-                font-size: 18px;
+                // color: #9a9ca4;
+                color: rgb(35, 36, 42);
+                font-size: 16px;
                 font-weight: 400;
                 padding-left: 20px;
                 padding-bottom: 20px;
@@ -167,7 +169,8 @@
                   overflow: hidden;
                   text-overflow: ellipsis;
                   white-space: nowrap;
-                  color: #9a9ca4;
+                  color: rgb(35, 36, 42);
+                 
                   display: block;
                   &:hover {
                     color: lightsalmon;
