--- a/src/pages/special/index.less
+++ b/src/pages/special/index.less
@@ -1,16 +1,22 @@
 .header {
-  background: lightgreen;
+  background: #90ee90;
   height: 300px;
+  .inputWrap {
+    width: 50%;
+    position: absolute;
+    top: 100px;
+    right: 200px;
+  }
 }
 .main {
   width: 960px;
   margin: 0 auto;
   .menu {
-    height: 200px;
+    height: 400px;
     background-color: lightblue;
   }
   .content {
-    height: 200px;
+    height: 400px;
     background-color: lightpink;
   }
   .hotQuestions{
