完成专题模块的基础功能开发。还需要配置主题色邓公嗯。

--- a/src/layouts/BasicLayout.less
+++ b/src/layouts/BasicLayout.less
@@ -32,6 +32,9 @@
         top: 40%;
         height: 50px;
         cursor: pointer;
+        &:hover{
+          color: white;
+        }
         .cn{
           height: 18px;
           font-size: 16px;
