--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -156,12 +156,12 @@
                 }
               }
               .title {
-                padding: 20px;
+                padding: 20px 20px 10px;
               }
               .questions {
                 // color: #9a9ca4;
                 color: rgb(35, 36, 42);
-                font-size: 16px;
+                font-size: 15px;
                 font-weight: 400;
                 padding-left: 20px;
                 padding-bottom: 20px;
@@ -169,8 +169,8 @@
                   overflow: hidden;
                   text-overflow: ellipsis;
                   white-space: nowrap;
-                  color: rgb(35, 36, 42);
-                 
+                  color: #797979;
+                  line-height: 26px;
                   display: block;
                   &:hover {
                     color: lightsalmon;
