--- a/src/pages/result/components/FAQ/index.less
+++ b/src/pages/result/components/FAQ/index.less
@@ -18,11 +18,15 @@
       text-align: center;
     }
     .text {
-      font-size: 16px;
+      font-size: 14px;
       font-weight: 400;
       overflow: hidden;
+      color: #333;
+      letter-spacing: 2px;
+      line-height: 27.2px;
+      text-indent: 2em;
     }
-    .source{
+    .source {
       font-size: 14px;
       color: #999;
       text-align: right;
