完成专题接口配置所有的更改

--- a/src/layouts/BasicLayout.less
+++ b/src/layouts/BasicLayout.less
@@ -14,9 +14,9 @@
       width: 100%;
       position: relative;
       .logo {
-        background: url(../assets/logo1.png) no-repeat;
-        height: 32px;
-        width: 52px;
+        // background: url(../assets/lo.png) no-repeat;
+        // height: 32px;
+        width: 160px;
         margin-right: 10px;
         margin-left: 50px;
         background-size: contain;
