--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -156,6 +156,7 @@
                 }
               }
               .title {
+                display: block;
                 padding: 20px 20px 10px;
               }
               .questions {
