--- a/src/pages/special/index.less
+++ b/src/pages/special/index.less
@@ -1,4 +1,4 @@
-.wrapper{
+.wrapper {
   position: relative;
   min-height: 100%;
   padding-bottom: 50px;
@@ -7,6 +7,17 @@
     background: #fff;
     height: 356px;
     padding: 0;
+    .logo {
+      position: absolute;
+      left: 20px;
+      right: 20px;
+      width: 162px;
+      z-index: 999;
+      cursor: pointer;
+      img{
+        width: 100%;
+      }
+    }
     .title {
       position: absolute;
       top: 90px;
@@ -26,7 +37,7 @@
         height: 100%;
       }
     }
-  
+
     .inputWrap {
       width: 670px;
       position: absolute;
@@ -34,17 +45,17 @@
       top: 180px;
       left: 50%;
       margin-left: -335px;
-      :global(.record-wrap){
+      :global(.record-wrap) {
         width: calc(100% - 88px);
       }
-      :global(.ant-input-lg){
+      :global(.ant-input-lg) {
         height: 40px;
         border-top-right-radius: 4px;
         border-bottom-right-radius: 4px;
       }
-      :global(.ant-btn-primary){
+      :global(.ant-btn-primary) {
         height: 40px;
-        background-color: #0084FF;
+        background-color: #0084ff;
         margin-left: 10px;
         font-size: 20px;
       }
@@ -107,7 +118,7 @@
       }
     }
   }
-  
+
   .footer {
     position: absolute;
     bottom: 0;
@@ -134,6 +145,4 @@
       }
     }
   }
-  
 }
-
