新增专题缩略图

--- a/src/layouts/BasicLayout.less
+++ b/src/layouts/BasicLayout.less
@@ -15,7 +15,7 @@
       position: relative;
       .logo {
         // background: url(../assets/lo.png) no-repeat;
-        // height: 32px;
+        height: 40px;
         width: 160px;
         margin-right: 10px;
         margin-left: 50px;
