--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -149,9 +149,10 @@
               }
               .picture {
                 width: 100%;
+                height: 300px;
                 img {
                   width: 100%;
-                  height: 100%;
+                  height: 300px;
                   cursor: pointer;
                 }
               }
