修改专题交互方式，新增两侧按钮，centerMode

--- a/src/components/SmartInput/index.less
+++ b/src/components/SmartInput/index.less
@@ -18,7 +18,7 @@
   }
   :global(.ant-btn-primary ){
     background: #0BB3FF;
-    font-weight: bold;
+    // font-weight: bold;
     height: 50px;
     width: 78px;
     font-size: 20px;
