--- a/src/layouts/BasicLayout.less
+++ b/src/layouts/BasicLayout.less
@@ -9,6 +9,7 @@
     height: 84px;
     line-height: 0;
     position: relative;
+    padding-left: 100px;
     .inputGroup {
       height: 100%;
       width: 100%;
@@ -16,7 +17,7 @@
       .logo {
         // background: url(../assets/lo.png) no-repeat;
         height: 40px;
-        width: 160px;
+        // width: 160px;
         margin-right: 10px;
         margin-left: 50px;
         background-size: contain;
@@ -49,7 +50,7 @@
       .inputWrap {
         float: left;
         position: absolute;
-        left: 380px;
+        left: 12%;
         top: 50%;
         margin-top: -20px;
         width: 38%;
