--- a/src/layouts/HomeLayout.less
+++ b/src/layouts/HomeLayout.less
@@ -41,9 +41,9 @@
       }
     }
     .logo1 {
-      background: url(../assets/随问logo.png) no-repeat;
-      width: 265px;
-      height: 42px;
+      background: url(../assets/homeLogo.png) no-repeat;
+      width: 250px;
+      height: 34px;
       background-size: cover;
       position: absolute;
       top: 20px;
