--- a/src/pages/special/index.less
+++ b/src/pages/special/index.less
@@ -14,7 +14,7 @@
       width: 162px;
       z-index: 999;
       cursor: pointer;
-      img{
+      img {
         width: 100%;
       }
     }
@@ -24,6 +24,7 @@
       left: 50%;
       transform: translateX(-50%);
       font-size: 36px;
+      font-family: Adobe Heiti Std;
       color: white;
       font-weight: bold;
       font-style: italic;
@@ -58,6 +59,17 @@
         background-color: #0084ff;
         margin-left: 10px;
         font-size: 20px;
+      }
+    }
+    .user {
+      position: absolute;
+      width: 30px;
+      height: 30px;
+      right: 100px;
+      top: 10px;
+      cursor: pointer;
+      img {
+        width: 100%;
       }
     }
   }
@@ -145,4 +157,17 @@
       }
     }
   }
+}
+
+:global(.ant-popover-inner) {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+:global(.ant-popover-placement-bottom > .ant-popover-content > .ant-popover-arrow) {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+:global(.ant-popover-placement-bottom
+    > .ant-popover-content
+    > .ant-popover-arrow) {
+  border-top-color: rgba(0, 0, 0, 0.8);
+  border-left-color: rgba(0, 0, 0, 0.8);
 }
