--- a/src/components/SmartInput/index.less
+++ b/src/components/SmartInput/index.less
@@ -1,6 +1,7 @@
 .input-wrap {
   width: 100%;
   border-radius: 0;
+  font-size: 12px;
   :global(.record-wrap) {
     width: 100%;
     background: #fff;
