--- a/src/pages/special/index.less
+++ b/src/pages/special/index.less
@@ -160,14 +160,14 @@
 }
 
 :global(.ant-popover-inner) {
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(60, 60, 60, 0.8);
 }
 :global(.ant-popover-placement-bottom > .ant-popover-content > .ant-popover-arrow) {
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(60, 60, 60, 0.8);
 }
 :global(.ant-popover-placement-bottom
     > .ant-popover-content
     > .ant-popover-arrow) {
-  border-top-color: rgba(0, 0, 0, 0.8);
-  border-left-color: rgba(0, 0, 0, 0.8);
+  border-top-color: rgba(60, 60, 60, 0.8) !important;
+  border-left-color: rgba(60, 60, 60, 0.8) !important;
 }
