--- a/src/pages/result/components/FAQ/index.less
+++ b/src/pages/result/components/FAQ/index.less
@@ -24,7 +24,7 @@
       color: #333;
       letter-spacing: 2px;
       line-height: 27.2px;
-      text-indent: 2em;
+      // text-indent: 2em;
     }
     .source {
       font-size: 14px;
