--- a/src/layouts/BasicLayout.less
+++ b/src/layouts/BasicLayout.less
@@ -31,7 +31,7 @@
         // padding-left: calc(50% - 600px);
         height: 38px;
         width: 175px;
-        left: 18%;
+        left: calc(50% - 600px);
         text-align: right;
         margin-right: 10px;
         background-size: contain;
@@ -85,6 +85,17 @@
           background-color: #0084FF;
           margin-left: 10px;
           font-size: 20px;
+          
+        }
+        button {
+          box-shadow: 1px 1px 2px 2px #f1f1f1;
+        }
+        button:active{
+          -webkit-box-shadow: 0px 2px 0px #84261a;
+          -moz-box-shadow: 0px 2px 0px #84261a;
+          box-shadow: 0px 2px 0px #84261a;
+          position:relative;
+          top:2px;
         }
       }
       .login {
