--- a/src/pages/special/index.less
+++ b/src/pages/special/index.less
@@ -9,13 +9,14 @@
     padding: 0;
     .logo {
       position: absolute;
-      left: 20px;
-      right: 20px;
-      width: 162px;
+      left: 40px;
+      top: 20px;
       z-index: 999;
+      height: 40px;
       cursor: pointer;
       img {
-        width: 100%;
+        height: 100%;
+        width: auto;
       }
     }
     .title {
