修复求助页面跳转参数穿错的问题，调整结果页logo

--- a/src/layouts/BasicLayout.less
+++ b/src/layouts/BasicLayout.less
@@ -29,6 +29,8 @@
         // background: url(../assets/lo.png) no-repeat;
         // margin-left: 50px;
         // padding-left: calc(50% - 600px);
+        vertical-align: top;
+        color: #fff;
         height: 38px;
         width: 175px;
         left: calc(50% - 600px);
