--- a/src/layouts/BasicLayout.less
+++ b/src/layouts/BasicLayout.less
@@ -90,14 +90,14 @@
           
         }
         button {
-          box-shadow: 1px 1px 2px 2px #f1f1f1;
+          border: 1px solid #fff;
         }
         button:active{
-          -webkit-box-shadow: 0px 2px 0px #84261a;
-          -moz-box-shadow: 0px 2px 0px #84261a;
-          box-shadow: 0px 2px 0px #84261a;
-          position:relative;
-          top:2px;
+          // -webkit-box-shadow: 0px 2px 0px #84261a;
+          // -moz-box-shadow: 0px 2px 0px #84261a;
+          // box-shadow: 0px 2px 0px #84261a;
+          // position:relative;
+          // top:2px;
         }
       }
       .login {
