调整路由模式，修复登录跳转链接

--- a/src/pages/query/index.less
+++ b/src/pages/query/index.less
@@ -19,7 +19,7 @@
     .item {
       background: #fff;
       margin-top: 16px;
-      padding: 8px 10px;
+      // padding: 8px 10px;
       border-radius: 4px;
       font-weight: 400;
       box-shadow: #a5a5a5 0px 1px 5px 0px;
