--- a/src/pages/special/index.less
+++ b/src/pages/special/index.less
@@ -64,10 +64,11 @@
     }
     .user {
       position: absolute;
-      width: 30px;
-      height: 30px;
+      // width: 30px;
+      // height: 30px;
       right: 100px;
       top: 10px;
+      color: #fff;
       cursor: pointer;
       img {
         width: 100%;
