修改求助部分目录结构，修改打包publicPath配置，修改部分相关专利，文献没有展示的问题

--- a/src/pages/query/components/Medical/index.less
+++ b/src/pages/query/components/Medical/index.less
@@ -8,6 +8,7 @@
     text-decoration: none;
     padding-bottom: 10px;
     font-size: 16px;
+    display: block;
   }
   .abstract {
     color: #333;
