--- a/src/pages/query/components/ReferenceBook63/index.less
+++ b/src/pages/query/components/ReferenceBook63/index.less
@@ -1,4 +1,4 @@
-.Journal{
+.reference{
   box-shadow: #a5a5a5 0 0 10.8px 0;
   margin-bottom: 20px;
   padding: 20px;
@@ -8,24 +8,25 @@
     padding: 10px 0;
     border-bottom: 1px dashed #ccc;
     color: #333;
-   
-   
     .Journal_left{
       float: left;
       margin-right: 20px;
       overflow: hidden;
       img{
-        // width: 180px;
+        width: 100px;
         height: auto;
       }
     }
+  .Journal_wrapper:last-child{
+    border-bottom: none;
+  }
     .Journal_right {
       overflow: hidden;
       .Journal_right_item{
-        line-height: 24px;
+        // height: 24px;
+        line-height: 28px;
       }
     }
   }
-  
 
 }
