--- a/src/pages/special/index.less
+++ b/src/pages/special/index.less
@@ -79,11 +79,11 @@
     width: 960px;
     margin: 0 auto;
     .menu {
-      height: 400px;
+      // height: 400px;
       padding-top: 40px;
     }
     .content {
-      height: 400px;
+      // height: 400px;
       background-color: white;
       .listWrap {
         .title {
