--- a/src/pages/reply/index.less
+++ b/src/pages/reply/index.less
@@ -6,6 +6,7 @@
       font-size: 24px;
       color: #666;
       padding: 10px 10px 20px;
+      margin-bottom: 20px;
     }
     .replyCount{
       color: #999;
