--- a/src/pages/reply/index.less
+++ b/src/pages/reply/index.less
@@ -27,7 +27,7 @@
     }
 
     .wrapper {
-      box-shadow: #a5a5a5 0 0 10.8px 0;
+      box-shadow: #a5a5a5 0 0 2px 0;
       margin-bottom: 20px;
       padding: 20px;
       background: #fff;
@@ -43,5 +43,9 @@
         margin: 0;
       }
     }
+   
+  }
+  :global(.bf-container .public-DraftEditorPlaceholder-root){
+    font-size: 13px;
   }
 }
