--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -5,23 +5,66 @@
   <title>知网随问</title>
   <link rel="icon" type="image/x-icon" href="<%= context.publicPath %>favicon.ico" />
   <script>
-   try {
-        window.FlushLogin();
-      } catch (e) {
+  //  try {
+  //       window.FlushLogin();
+  //     } catch (e) {
 
+  //     }
+  var docCookies = {
+  getItem: function (sKey) {
+    return decodeURIComponent(document.cookie.replace(new RegExp("(?:(?:^|.*;)\\s*" + encodeURIComponent(sKey).replace(/[-.+*]/g, "\\$&") + "\\s*\\=\\s*([^;]*).*$)|^.*$"), "$1")) || null;
+  },
+  setItem: function (sKey, sValue, vEnd, sPath, sDomain, bSecure) {
+    if (!sKey || /^(?:expires|max\-age|path|domain|secure)$/i.test(sKey)) { return false; }
+    var sExpires = "";
+    if (vEnd) {
+      switch (vEnd.constructor) {
+        case Number:
+          sExpires = vEnd === Infinity ? "; expires=Fri, 31 Dec 9999 23:59:59 GMT" : "; max-age=" + vEnd;
+          break;
+        case String:
+          sExpires = "; expires=" + vEnd;
+          break;
+        case Date:
+          sExpires = "; expires=" + vEnd.toUTCString();
+          break;
       }
-    window.RemoveCookie = window.Ecp_ReomveCookie;
-    function LoginSucess(data) {
-      window.localStorage.setItem('userInfo',JSON.stringify(data))
-      if(data.UserType === 'bk'){
-        window.location.reload()
-
-      }
-
     }
-    function Ecp_LogoutOptr(data) { 
-      
+    document.cookie = encodeURIComponent(sKey) + "=" + encodeURIComponent(sValue) + sExpires + (sDomain ? "; domain=" + sDomain : "") + (sPath ? "; path=" + sPath : "") + (bSecure ? "; secure" : "");
+    return true;
+  },
+  removeItem: function (sKey, sPath, sDomain) {
+    if (!sKey || !this.hasItem(sKey)) { return false; }
+    document.cookie = encodeURIComponent(sKey) + "=; expires=Thu, 01 Jan 1970 00:00:00 GMT" + ( sDomain ? "; domain=" + sDomain : "") + ( sPath ? "; path=" + sPath : "");
+    return true;
+  },
+  hasItem: function (sKey) {
+    return (new RegExp("(?:^|;\\s*)" + encodeURIComponent(sKey).replace(/[-.+*]/g, "\\$&") + "\\s*\\=")).test(document.cookie);
+  },
+  keys: /* optional method: you can safely remove it! */ function () {
+    var aKeys = document.cookie.replace(/((?:^|\s*;)[^\=]+)(?=;|$)|^\s*|\s*(?:\=[^;]*)?(?:\1|$)/g, "").split(/\s*(?:\=[^;]*)?;\s*/);
+    for (var nIdx = 0; nIdx < aKeys.length; nIdx++) { aKeys[nIdx] = decodeURIComponent(aKeys[nIdx]); }
+    return aKeys;
   }
+};
+
+const loginStatus = docCookies.getItem('Ecp_LoginStuts');
+const domain = window.document.domain;
+if(loginStatus){
+  window.localStorage.setItem('userInfo',loginStatus)
+}else{
+  if (domain.endsWith('cnki.net')) {
+    window.localStorage.setItem('userInfo', null);
+  }
+}
+    // function LoginSucess(data) {
+    //   console.log('success',data)    
+    //   window.localStorage.setItem('userInfo',JSON.stringify(data))
+    //   if(data.UserName === 'bk' && !ecp_LoginStatus){
+    //     window.location.reload()
+    //   }
+    // }
+    function Ecp_LogoutOptr(data) {console.log('exit', data) }
   </script>
 </head>
 <body>
