--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -192,14 +192,17 @@
         }
         :global(.slick-slide) {
           transform: scale(0.9);
-          box-shadow:0px 0px 32px 0px rgba(0,78,255,0.2);
+          box-shadow: 0px 0px 32px 0px rgba(0,78,255,0.2);
+          // box-shadow:2px 2px 0px 2px rgba(0,78,255,0.2);
+          // border: 1px solid #eee;
+          padding: 0 !important;
           
         }
         :global(.slick-center) {
           transform: scale(1.05);
         }
         .specialWrapper {
-          background: #fff;
+          // background: #fff;
           border: none;
           .picture {
             width: 100%;
@@ -218,8 +221,7 @@
             padding: 20px 20px 10px;
           }
           .questions {
-            // color: #9a9ca4;
-            
+        
             color: rgb(35, 36, 42);
             font-size: 15px;
             font-weight: 400;
@@ -244,9 +246,10 @@
 
       .special_help {
         width: 1200px;
-        margin: 0 auto;
+        margin: 0px auto;
+        padding: 10px 0 210px 0;
         overflow: hidden;
-        padding: 10px 0 !important;
+        // padding: 10px 0 !important;
         .help_more {
           cursor: pointer;
           width: 100;
