修改brafteditor下拉框的背景颜色，文献的动态展示

--- a/src/pages/reply/index.less
+++ b/src/pages/reply/index.less
@@ -48,4 +48,19 @@
   :global(.bf-container .public-DraftEditorPlaceholder-root){
     font-size: 13px;
   }
+  :global(.bf-dropdown .dropdown-content .dropdown-arrow){
+    background-color: #fff;
+  }
+  :global(.bf-dropdown .dropdown-content-inner){
+    background-color: #fff;
+    color: #666;
+   
+  }
+  :global(.bf-font-sizes){
+    background-color:rgba(0, 0, 0, .5);
+  }
+  :global(.bf-link-editor .input-group input){
+    border: 1px solid #cecece;
+    color: #666;
+  }
 }
