整体修改了样式

--- a/src/pages/query/components/CommunityAnswer/index.less
+++ b/src/pages/query/components/CommunityAnswer/index.less
@@ -1,6 +1,7 @@
 .CommunityAnswer{
   padding: 20px 20px 10px;
-  box-shadow: rgb(165, 165, 165) 0px 0px 10.8px 0px;
+  box-shadow: #cecece 0 0 6px 0;
+  background-color: #fff;
   margin-bottom: 10px;
   .CommunityAnswer_question{
     color: #2f8bd6;
