--- a/src/pages/query/components/Graphic.less
+++ b/src/pages/query/components/Graphic.less
@@ -1,5 +1,5 @@
 .Graphic{
-  box-shadow: #a5a5a5 0 0 10.8px 0;
+  box-shadow: #cecece 0 0 6px 0;
   margin-bottom: 20px;
   padding: 20px;
   background: #fff;
