--- a/src/pages/query/components/ReadComp/index.less
+++ b/src/pages/query/components/ReadComp/index.less
@@ -1,16 +1,16 @@
 .ReadComp {
   .wrapper {
-    // box-shadow: #a5a5a5 0 0 10.8px 0;
-    border: 10px solid transparent;
+    box-shadow: #cecece 0 0 6px 0;
+    // border: 10px solid transparent;
     margin-bottom: 20px;
     padding: 20px;
     background: #fff;
     word-break: break-all;
     word-wrap: break-word;
-    -moz-border-image: url(../../../../assets/border3.png) 30  round; /* Old Firefox */
-    -webkit-border-image: url(../../../../assets/border3.png) 30  round; /* Safari and Chrome */
-    -o-border-image: url(../../../../assets/border3.png) 30  round; /* Opera */
-    border-image: url(../../../../assets/border3.png) 30  round;
+    // -moz-border-image: url(../../../../assets/border3.png) 30  round; /* Old Firefox */
+    // -webkit-border-image: url(../../../../assets/border3.png) 30  round; /* Safari and Chrome */
+    // -o-border-image: url(../../../../assets/border3.png) 30  round; /* Opera */
+    // border-image: url(../../../../assets/border3.png) 30  round;
   }
   :global(.ant-list-footer) {
     overflow: hidden;
