更新样式。结果页背景色

--- a/src/pages/reply/index.less
+++ b/src/pages/reply/index.less
@@ -12,9 +12,10 @@
       color: #999;
     }
     .answerItem{
-      // height: 80px;
+      background-color: #fff;
       border-bottom: 1px solid #ccc;
-      padding: 20px 0;
+      padding: 20px;
+      border-radius: 4px;
       .itemTitle{
         font-size: 14px;
         color: #333;
