--- a/src/layouts/BasicLayout.less
+++ b/src/layouts/BasicLayout.less
@@ -141,6 +141,10 @@
       }
     }
   }
+  .content{
+    background-color: #f6f6f6;
+    min-height: calc(100vh - 134px);
+  }
 
   @media screen and (max-width: 1200px) {
     .header{
