--- a/src/pages/detail/index.less
+++ b/src/pages/detail/index.less
@@ -1,24 +1,64 @@
 .detail {
   .header {
     padding: 0 calc(50vw - 600px);
-    height: 130px;
+    height: 100px;
     text-align: right;
-    background: lightgreen;
-    .logo {
-      background-image: url(../../assets/logo1.png);
-      background-size: 100% 100%;
-      width: 66px;
-      height: 56px;
-      float: left;
+    background: rgb(11, 179, 255);
+    .user {
+      overflow: hidden;
+      padding: 10px 0;
+      .tips {
+        color: #fff;
+      }
+      .login_btn,
+      .register_btn {
+        height: 30px;
+        width: 60px;
+        display: inline-block;
+        text-align: center;
+        line-height: 28px;
+        background: transparent;
+        color: #fff;
+        border: 1px solid #fff;
+        border-radius: 4px;
+        margin-left: 20px;
+        cursor: pointer;
+        a {
+          color: #fff;
+        }
+        &:hover {
+          background: #fff;
+          color: #333;
+          a {
+            color: #333;
+          }
+        }
+      }
     }
-    .ttile {
-      color: #fff;
+    .wrapper {
+      display: flex;
+      .logo {
+        background-image: url(../../assets/logo1.png);
+        background-size: 66px 40.48px;
+        background-repeat: no-repeat;
+        width: 300px;
+        height: 40.48px;
+        cursor: pointer;
+      }
+      .title {
+        flex: 1;
+        -ms-flex: 1;
+        color: #fff;
+        text-align: center;
+        font-size: 24px;
+        font-weight: 400;
+      }
     }
   }
   .main {
     width: 1200px;
-    margin: 0 auto;
-    min-height: calc(100vh - 180px);
+    margin: 10px auto 0;
+    min-height: calc(100vh - 160px);
     .sider {
       background-color: transparent;
       margin-right: 40px;
@@ -29,27 +69,54 @@
         padding-left: 0;
         border: 1px solid #ccc;
       }
+      :global(.ant-anchor-link) {
+        padding: 0;
+      }
+
       .wrapper {
         .title {
           width: 256px;
-          background-color: #ccc;
           height: 38px;
+          line-height: 38px;
+          color: #444;
+          font-weight: 600;
+          font-size: 16px;
+          padding-left: 20px;
+          background-color: #dadada;
+          box-sizing: border-box;
         }
         .link_item {
           height: 60px;
           width: 256px;
           line-height: 60px;
-          padding: 0;
-          text-align: center;
+          padding-left: 20px;
           background-color: transparent;
           border-bottom: 1px solid #ccc;
+          box-sizing: border-box;
+          :global(.ant-anchor-link-title) {
+            color: #2f8bd6;
+            &:hover {
+              color: #f60;
+            }
+          }
+          &:hover {
+            background-color: #eee;
+          }
         }
         :global(.ant-anchor-ink) {
           display: none;
         }
+        :global(.ant-anchor-link-active) {
+          background-color: rgb(11, 179, 255);
+
+          :global(.ant-anchor-link-title) {
+            color: #fff;
+          }
+        }
       }
     }
     .content {
+      width: 900px;
       .content_item {
         box-shadow: #cecece 0 0 6px 0;
         background-color: #fff;
