登录注册相关

--- a/src/layouts/BasicLayout.less
+++ b/src/layouts/BasicLayout.less
@@ -117,7 +117,7 @@
         .login_btn,
         .register_btn {
           height: 30px;
-          width: 60px;
+          // width: 60px;
           display: inline-block;
           text-align: center;
           line-height: 28px;
@@ -132,7 +132,7 @@
           }
           &:hover {
             background: #fff;
-            color: #333;
+            // color: #333;
             a{
               color: #333;
             }
