--- a/src/layouts/HomeLayout.less
+++ b/src/layouts/HomeLayout.less
@@ -18,7 +18,7 @@
       .login_btn,
       .register_btn {
         height: 30px;
-        width: 60px;
+        // width: 60px;
         display: inline-block;
         line-height: 28px;
         text-align: center;
@@ -32,8 +32,8 @@
           color: #fff;
         }
         &:hover {
-          background: #fff;
-          color: #333;
+          // background: #fff;
+          // color: #333;
           a {
             color: #333;
           }
