完成第三方登录的开发，新增套娃弹窗，完美解决第三方登录回调的问题。

--- a/src/components/LoginRegister/index.less
+++ b/src/components/LoginRegister/index.less
@@ -35,3 +35,15 @@
     }
   }
 }
+
+.register {
+  .title{
+    font-size: 20px;
+    font-family: Microsoft YaHei;
+    text-align: center;
+    font-weight: 400;
+    color: rgba(67, 71, 80, 1);
+    line-height: 28px;
+    padding: 30px 0;
+  }
+}
